fix line-height and spacing between links

--- a/styles/sidebar.scss
+++ b/styles/sidebar.scss
@@ -73,7 +73,8 @@ $indent: 20px;
             border: none;
             font-family: inherit;
             font-weight: normal;
-            margin: 0 0 0.80em 0;
+            line-height: 1.3em;
+            margin: 0 0 1.0em 0;
 
             &:hover, &:active {
                 font-weight: bold;
